2005-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-attributes-with-ls): Return t as
	9. attribute.  It doesn't matter, because it will be converted
	later on.
	(tramp-handle-file-ownership-preserved-p): Rewritten.  The old
	implementation was just heuristic.
	(tramp-post-connection): Set uid and gid properties.
	(tramp-convert-file-attributes): Set file's gid change bit.
	(tramp-get-remote-uid, tramp-get-remote-gid): New defuns.

2005-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Use "~root" for tilde
	expansion in case of su(do)? methods.  The home directory of the
	local user will be taken else.

2005-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-telnet)
	(tramp-open-connection-rsh, tramp-open-connection-su)
	(tramp-open-connection-multi): Set PS1 to "$ ".  Otherwise, a
	local shell prompt could hurt.  Reported by Romain Francoise
	<romain@orebokech.com>.

2005-11-02  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-action-out-of-band): Handle scp message
	"Permission denied".

2005-10-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-chunksize): Escape parentheses in docstring
	starting at beginning of line.  Fontification is messed up when
	`open-paren-in-column-0-is-defun-start' set to t.  Reported by
	John Paul Wallington <jpw@pobox.com>.

2005-10-28  Richard M. Stallman  <rms@gnu.org>

	* tramp.el (tramp-completion-mode): defvar moved up.

2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-let-maybe): Add `edebug-form-spec' property.
	(tramp-handle-expand-file-name): Bind `default-directory' locally
	to "/" in order to avoid problems with UNC shares or Cygwin
	mounts.

2005-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): New defvar.  Used in
	`tramp-completion-mode' for checking if we are in completion mode.