@@ -1,7 +1,11 @@
+2005-11-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-util.el (top): Fix compilation warning.
+
 2005-11-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-file-attributes-with-ls): Return t as
-	9. attribute.  It doesn't matter, because it will be converted
+	9th attribute.  It doesn't matter, because it will be converted
 	later on.
 	(tramp-handle-file-ownership-preserved-p): Rewritten.  The old
 	implementation was just heuristic.
